--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "tacky-thoc",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "format:file": "yarn prettier --write"
-  },
-  "devDependencies": {
-    "prettier": "^3.0.0",
-    "stylelint": "^15.10.2",
-    "stylelint-config-standard": "^34.0.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.5.2"
-  }
+    "name": "tacky-thoc",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "format:file": "yarn prettier --write"
+    },
+    "devDependencies": {
+        "eslint": "^9.7.0",
+        "prettier": "^3.0.0",
+        "stylelint": "^15.10.2",
+        "stylelint-config-standard": "^34.0.0",
+        "typescript": "^5.0.2",
+        "vite": "^4.5.2"
+    }
 }
